Fixed popup menu item icon spacing

--- a/src/WebComponents/PopupMenu/popup-menu-item.scss
+++ b/src/WebComponents/PopupMenu/popup-menu-item.scss
@@ -47,7 +47,7 @@
     }
 
     &[icon-space] {
-        > button {
+        > button ::content {
              > vi-icon {
                 display: inline-block !important;
                 visibility: hidden !important;
